<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.github.florent37.shapeofview.shapes.RoundRectView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:shape_roundRect_bottomRightRadius="50dp"
        app:shape_roundRect_borderColor="@android:color/black">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_login">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_movie"
                android:layout_centerInParent="true"
                tools:ignore="ContentDescription">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_margin="20dp"
                android:textSize="24sp">
            </TextView>
        </RelativeLayout>
    </com.github.florent37.shapeofview.shapes.RoundRectView>

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">
        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_margin="12dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:background="@drawable/bg_login_edittext"
            android:padding="12dp"
            android:elevation="1dp"
            android:textCursorDrawable="@color/app_color2">
        </EditText>
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_margin="12dp"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:background="@drawable/bg_login_edittext"
            android:padding="12dp"
            android:elevation="1dp"
            android:textCursorDrawable="@color/app_color2">
        </EditText>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rb_remember_login"
                android:layout_margin="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:buttonTint="@color/app_color2">
            </RadioButton>
            <TextView
                android:id="@+id/tv_login_forget_password"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:letterSpacing="0.05"
                android:layout_marginEnd="12dp"
                tools:ignore="RelativeOverlap">
            </TextView>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_margin="20dp"
        android:layout_below="@id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_login"
        android:text="@string/log_in"
        android:textColor="@color/white">
    </Button>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_yet">
        </TextView>
        <TextView
            android:id="@+id/tv_Login_To_Register"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_here"
            android:textColor="@color/app_color1"
            android:textSize="16sp">
        </TextView>
    </LinearLayout>
</RelativeLayout>