<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imv_register_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back"
            android:padding="3dp"
            android:layout_margin="10dp">
        </ImageView>
        <TextView
            android:layout_toEndOf="@id/imv_register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:textSize="24sp"
            android:layout_centerVertical="true">
        </TextView>

        <View
            android:layout_toStartOf="@id/v_top_half_circle"
            android:layout_centerVertical="true"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/bg_full_circle_top"
            android:layout_marginEnd="25dp">
        </View>

        <View
            android:id="@+id/v_top_half_circle"
            android:layout_alignParentEnd="true"
            android:layout_width="36dp"
            android:layout_height="72dp"
            android:background="@drawable/bg_half_circle_top">
        </View>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:elevation="2dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edt_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="text"
                android:background="@drawable/bg_login_edittext"
                android:padding="12dp"
                android:elevation="1dp"
                android:textCursorDrawable="@color/app_color2">
            </EditText>
            <EditText
                android:layout_marginTop="12dp"
                android:id="@+id/edt_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                android:background="@drawable/bg_login_edittext"
                android:padding="12dp"
                android:elevation="1dp"
                android:textCursorDrawable="@color/app_color2">
            </EditText>
            <EditText
                android:layout_marginTop="12dp"
                android:id="@+id/edt_register_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:background="@drawable/bg_login_edittext"
                android:padding="12dp"
                android:elevation="1dp"
                android:textCursorDrawable="@color/app_color2">
            </EditText>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <View
            android:id="@+id/v_bot_half_circle"
            android:layout_width="36dp"
            android:layout_height="72dp"
            android:background="@drawable/bg_half_circle_bottom">
        </View>

        <View
            android:layout_toEndOf="@id/v_bot_half_circle"
            android:layout_height="36dp"
            android:layout_width="36dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:background="@drawable/bg_full_circle_bottom">
        </View>

        <TextView
            android:id="@+id/tv_register_create"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:textSize="24sp"
            android:layout_centerVertical="true">
        </TextView>

    </RelativeLayout>
</RelativeLayout>